--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 streamlit
 pandas
 PyPDF2
-faiss-cpu
-langchain>=0.1.0
-langchain-community
-langchain-groq
-langchain-google-genai
-sentence-transformers
-python-dotenv
-tiktoken
-openai
+langchain>=0.2.0
+langchain-community>=0.2.0
+langchain-google-genai>=0.1.0
+langchain-groq>=0.1.0
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.0
+google-generativeai>=0.3.0
+groq>=0.4.0
