--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,15 @@ faiss-cpu>=1.7.4
 sentence-transformers>=2.2.0
 google-generativeai>=0.3.0
 groq>=0.4.0
+streamlit==1.50.0
+pandas==2.3.3
+PyPDF2==3.0.1
+beautifulsoup4==4.12.3
+langchain==0.3.2
+langchain-community==0.3.2
+langchain-google-genai==1.1.2
+langchain-groq==0.3.0
+sentence-transformers==3.1.1
+faiss-cpu==1.8.0
+google-generativeai==0.8.3
+groq==0.11.1
