--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,13 @@
-streamlit==1.50.0
-numpy==1.26.4
-pandas==2.2.1
+streamlit==1.39.0
+pandas==2.2.3
 PyPDF2==3.0.1
-beautifulsoup4==4.12.3
-
 langchain==0.2.16
 langchain-community==0.2.16
-langchain-google-genai==1.0.10
-langchain-groq==0.2.0
-
-sentence-transformers==3.0.1
-faiss-cpu==1.7.4
-
-google-generativeai==0.8.0
-groq==0.11.0
-orjson==3.10.3
+langchain-google-genai==0.0.12
+langchain-groq==0.0.3
+faiss-cpu==1.8.0
+sentence-transformers==2.7.0
+tiktoken==0.5.1
+google-genai==0.3.3
+groq-client==0.10.3
+openai==0.27.8
